// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailActions should render properly when creating new 1`] = `
<gi
  primary={
    Array [
      <ei
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </ei>,
      <ei
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </ei>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing collaborative datasource 1`] = `
<gi
  primary={
    Array [
      <ei
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </ei>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing owned datasource 1`] = `
<gi
  primary={
    Array [
      <ei
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </ei>,
      <ei
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </ei>,
    ]
  }
  secondary={
    Array [
      <ei
        color="danger"
        icon={<Delete />}
        onClick={[Function]}
        size="m"
    >
        Delete
    </ei>,
    ]
  }
/>
`;
